--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_gallery.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_gallery.html
@@ -1,4 +1,4 @@
-<section class="galery">
+<section class="galery" id="galery">
     <div class="container">
 
         <h2 class="galery__title">GALLERY</h2>
