--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_get-in-touch.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_get-in-touch.html
@@ -1,4 +1,4 @@
-<section class="get-in-touch">
+<section class="get-in-touch" id="get-in-touch">
     <div class="map">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12101.653951325858!2d-73.93180715706414!3d40.686890245078516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1suk!2sua!4v1695923369113!5m2!1suk!2sua"
