--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_hero-block.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_hero-block.html
@@ -28,8 +28,13 @@
                 <p class="hero-slider__text">WE MAKE THE WORLD BEAUTIFUL</p>
             </div>
         </div>
-
-
     </div>
-
+    <div class="scroll-down">
+        <div class="scroll-down__wrapper">
+            <a class="scroll-down__link" href="#what-we-do">
+                <img class="scroll-down__circle" src="images/ellipse-6.svg" alt="elips">
+                <img class="scroll-down__arrow" src="images/scroll.svg" alt="arrow">
+            </a>
+        </div>
+    </div>
 </section>
