--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_nav.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_nav.html
@@ -12,10 +12,10 @@
                         <span class="menu-open-btn__line"></span>
                     </button>
                     <ul class="menu">
-                        <li class="menu__item"><a href="#" class="menu__item-link">ABOUT US</a></li>
-                        <li class="menu__item"><a href="#" class="menu__item-link">PROJECTS</a></li>
-                        <li class="menu__item"><a href="#" class="menu__item-link">NEWS</a></li>
-                        <li class="menu__item"><a href="#" class="menu__item-link">CONTACT</a></li>
+                        <li class="menu__item"><a href="#what-we-do" class="menu__item-link">ABOUT US</a></li>
+                        <li class="menu__item"><a href="#galery" class="menu__item-link">PROJECTS</a></li>
+                        <li class="menu__item"><a href="#news" class="menu__item-link">NEWS</a></li>
+                        <li class="menu__item"><a href="#get-in-touch" class="menu__item-link">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
