--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_news.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_news.html
@@ -1,4 +1,4 @@
-<section class="news">
+<section class="news" id="news">
     <div class="container">
         <h2 class="news__title">LATEST NEWS</h2>
         <div class="news-slider">
