--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_what-we-do.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_what-we-do.html
@@ -1,4 +1,4 @@
-<section class="what-we-do">
+<section class="what-we-do" id="what-we-do">
 
     <div class="container">
         <h2 class="wwd-title wwd-main-title">WHAT WE DO</h2>
