--- a/students/umienchuk_oksana/project_second_monticello/src/html/_gallery.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_gallery.html
@@ -1,44 +1,84 @@
 <section class="gallery">
     <h2 class="gallery__title">GALLERY</h2>
-    <div class="parent">
-        <div class="div1">
-            <img src="../images/gallery-img-01.jpg" alt="">
+    <div class="container row">
+        <div class="gallery__grid">
+            <div class="gallery__grid-item grid-img-wrap col-6">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-01.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="../images/gallery/gallery-img-01.jpg" alt="">
+                </a>
+            </div>
+            <div class="gallery__grid-item grid-img-wrap col-3">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-02.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="../images/gallery/gallery-img-02.jpg" alt="">
+                </a>
+            </div>
+            <div class="gallery__grid-item grid-img-wrap col-3">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-03.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="../images/gallery/gallery-img-03.jpg" alt="">
+                </a>
+            </div>
+            <div class="gallery__grid-item grid-img-wrap col-3">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-04.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="../images/gallery/gallery-img-04.jpg" alt="">
+                </a>
+            </div>
+            <div class="gallery__grid-item grid-img-wrap col-3">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-05.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="../images/gallery/gallery-img-05.jpg" alt="">
+                </a>
+            </div>
+
+            <div class="gallery__grid-item grid-img-wrap gallery-open">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-06.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="../images/gallery/gallery-img-06.jpg" alt="">
+                </a>
+            </div>
+            <div class="gallery__grid-item grid-img-wrap gallery-open">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-07.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="../images/gallery/gallery-img-07.jpg" alt="">
+                </a>
+            </div>
+            <div class="gallery__grid-item grid-img-wrap gallery-open">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-088.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="../images/gallery/gallery-img-08.jpg" alt="">
+                </a>
+            </div>
+            <div class="gallery__grid-item grid-img-wrap gallery-open">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-09.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="../images/gallery/gallery-img-09.jpg" alt="">
+                </a>
+            </div>
+            <div class="gallery__grid-item grid-img-wrap gallery-open">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-10.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="../images/gallery/gallery-img-10.jpg" alt="">
+                </a>
+            </div>
+            <div class="gallery__grid-item grid-img-wrap gallery-open">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-11.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="../images/gallery/gallery-img-11.jpg" alt="">
+                </a>
+            </div>
+            <div class="gallery__grid-item gallery__img-wrap gallery-open">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-12.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="../images/gallery/gallery-img-12.jpg" alt="">
+                </a>
+            </div>
+            <div class="gallery__grid-item grid-img-wrap gallery-open">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-13.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="../images/gallery/gallery-img-13.jpg" alt="">
+                </a>
+            </div>
+            <div class="gallery__grid-item grid-img-wrap gallery-open">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-14.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="../images/gallery/gallery-img-14.jpg" alt="">
+                </a>
+            </div>
+            <div class="gallery__grid-item grid-img-wrap gallery-open">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-15.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="../images/gallery/gallery-img-15.jpg" alt="">
+                </a>
+            </div>
         </div>
-        <div class="div2">
-            <img src="../images/gallery-img-02.jpg" alt="">
-        </div>
-        <div class="div3">
-            <img src="../images/gallery-img-03.jpg" alt="">
-        </div>
-        <div class="div4">
-            <img src="../images/gallery-img-04.jpg" alt="">
-        </div>
-        <div class="div5">
-            <img src="../images/gallery-img-05.jpg" alt="">
-        </div>
-        <div class="div6">
-            <img src="../images/gallery-img-01.jpg" alt="">
-        </div>
-        <div class="div7">
-            <img src="../images/gallery-img-02.jpg" alt="">
-        </div>
-        <div class="div8">
-            <img src="../images/gallery-img-03.jpg" alt="">
-        </div>
-        <div class="div9">
-            <img src="../images/gallery-img-04.jpg" alt="">
-        </div>
-        <div class="div10">
-            <img src="../images/gallery-img-05.jpg" alt="">
-        </div>
-        <div class="div11">
-            <img src="../images/gallery-img-01.jpg" alt="">
-        </div>
-        <div class="div12">
-            <img src="../images/gallery-img-02.jpg" alt="">
-        </div>
-        <div class="div13">
-            <img src="../images/gallery-img-03.jpg" alt="">
-        </div>
+        <a href="#" class="gallery__btn">SEE MORE</a>
     </div>
 </section>
