--- a/students/umienchuk_oksana/project_second_monticello/src/index.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/index.html
@@ -61,6 +61,7 @@
         </symbol>
     </svg>
     <script src="./js/script.js"></script>
+    <script src="../node_modules/lightbox2/src/js/lightbox.js"></script>
 </body>
 
 </html>
