--- a/students/hridina_anastasiia/exam_project_2/src/index.html
+++ b/students/hridina_anastasiia/exam_project_2/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
     <title>Monticello</title>
+    <link href="path/to/lightbox.css" rel="stylesheet" />
     <link rel="shortcut icon" href="./images/logo_favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -24,6 +25,7 @@
     <footer class="footer">
         @@include('./_footer.html')
     </footer>
+
     <script src="./js/script.js"></script>
 </body>
 
