--- a/students/hridina_anastasiia/exam_project_2/src/index.html
+++ b/students/hridina_anastasiia/exam_project_2/src/index.html
@@ -26,6 +26,7 @@
         @@include('./_footer.html')
     </footer>
 
+    <script src="path/to/lightbox.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
