--- a/students/umienchuk_oksana/project_second_monticello/src/html/_gallery.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_gallery.html
@@ -1,28 +1,29 @@
-<section class="gallery">
-    <h2 class="gallery__title">GALLERY</h2>
-    <div class="container row">
+<section class="gallery" id="gallery">
+    <div class="container">
+
+        <h2 class="gallery__title">GALLERY</h2>
         <div class="gallery__grid">
-            <div class="gallery__grid-item grid-img-wrap col-6">
+            <div class="gallery__grid-item grid-img-wrap">
                 <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-01.jpg" data-lightbox="lightbox">
                     <img class="gallery__img" src="../images/gallery/gallery-img-01.jpg" alt="">
                 </a>
             </div>
-            <div class="gallery__grid-item grid-img-wrap col-3">
+            <div class="gallery__grid-item grid-img-wrap">
                 <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-02.jpg" data-lightbox="lightbox">
                     <img class="gallery__img" src="../images/gallery/gallery-img-02.jpg" alt="">
                 </a>
             </div>
-            <div class="gallery__grid-item grid-img-wrap col-3">
+            <div class="gallery__grid-item grid-img-wrap">
                 <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-03.jpg" data-lightbox="lightbox">
                     <img class="gallery__img" src="../images/gallery/gallery-img-03.jpg" alt="">
                 </a>
             </div>
-            <div class="gallery__grid-item grid-img-wrap col-3">
+            <div class="gallery__grid-item grid-img-wrap">
                 <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-04.jpg" data-lightbox="lightbox">
                     <img class="gallery__img" src="../images/gallery/gallery-img-04.jpg" alt="">
                 </a>
             </div>
-            <div class="gallery__grid-item grid-img-wrap col-3">
+            <div class="gallery__grid-item grid-img-wrap">
                 <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-05.jpg" data-lightbox="lightbox">
                     <img class="gallery__img" src="../images/gallery/gallery-img-05.jpg" alt="">
                 </a>
@@ -39,7 +40,7 @@
                 </a>
             </div>
             <div class="gallery__grid-item grid-img-wrap gallery-open">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-088.jpg" data-lightbox="lightbox">
+                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-08.jpg" data-lightbox="lightbox">
                     <img class="gallery__img" src="../images/gallery/gallery-img-08.jpg" alt="">
                 </a>
             </div>
@@ -68,17 +69,7 @@
                     <img class="gallery__img" src="../images/gallery/gallery-img-13.jpg" alt="">
                 </a>
             </div>
-            <div class="gallery__grid-item grid-img-wrap gallery-open">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-14.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="../images/gallery/gallery-img-14.jpg" alt="">
-                </a>
-            </div>
-            <div class="gallery__grid-item grid-img-wrap gallery-open">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-15.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="../images/gallery/gallery-img-15.jpg" alt="">
-                </a>
-            </div>
         </div>
-        <a href="#" class="gallery__btn">SEE MORE</a>
+        <button class="gallery-btn btn">SEE MORE</button>
     </div>
 </section>
