news slider changes

--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_carusel-item.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_carusel-item.html
@@ -1,22 +1,16 @@
-<div class="carusel__item c-item">
-    <div class="c-item__image-wrapper">
-        <img class="c-item__image" src="@@item-image" alt="@@item-image-alt">
-    </div>
-    <div class="c-item__content">
-        <h3 class="c-item__title">@@item-title</h3>
-        <p class="c-item__description">@@item-description</p>
-        <div class="c-item__user-wrapper">
-            <!-- <div class="row"> -->
-            <div class="col-3">
-                <div class="c-item__user-image-wrapper">
-                    <img class="c-item__user-image" src="@@user-image" alt="@@user-image-alt">
+<div class="news-slider__item">
+    <div class="news">
+        <img src="@@item-image" alt="@@item-image-alt" class="news__img">
+        <div class="news__deskription">
+            <h3 class="news__title">@@item-title</h3>
+            <p class="news__text">@@item-description</p>
+            <div class="news__author news-author">
+                <img class="news-author__img" src="@@user-image" alt="@@user-image-alt">
+                <div class="news-author__info">
+                    <p class="news-author__name">@@user-name</p>
+                    <p class="news-author__date">@@date</p>
                 </div>
             </div>
-            <div class="col-9">
-                <p class="c-item__user-name">@@user-name</p>
-                <p class="c-item__date">@@date</p>
-            </div>
-            <!-- </div> -->
         </div>
     </div>
 </div>
