--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_news.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_news.html
@@ -1,6 +1,6 @@
-<section class="news" id="news">
+<section class="last-news" id="news">
     <div class="container">
-        <h2 class="news__title">LATEST NEWS</h2>
+        <h2 class="last-news__title">LATEST NEWS</h2>
         <div class="news-slider">
             @@include('_carusel-item.html', {
             "item-image": "images/cubic-house.jpg",
