--- a/students/umienchuk_oksana/project_second_monticello/src/html/_hero.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_hero.html
@@ -13,7 +13,7 @@
             <div class="hero-slider__block">
                 <img class="hero-slider__img" src="../images/hero-02.jpg" alt="Building">
                 <div class="container hero-slider__container">
-                    <h2 class="hero-slider__sub-title">Elevating Everyday Life</h2>
+                    <h2 class="hero-slider__sub-title">Everyday Life</h2>
                     <p class="hero-slider__sub-text">Creating Beauty with Simplicity and Modernity</p>
                 </div>
             </div>
@@ -31,7 +31,7 @@
             <div class="hero-slider__block">
                 <img class="hero-slider__img" src="../images/hero-04.jpg" alt="Building">
                 <div class="container hero-slider__container">
-                    <h2 class="hero-slider__sub-title">Beauty Unveiled Daily</h2>
+                    <h2 class="hero-slider__sub-title">Beauty Unveiled</h2>
                     <p class="hero-slider__sub-text">A Simple, Modern Approach</p>
                 </div>
             </div>
@@ -40,7 +40,7 @@
             <div class="hero-slider__block">
                 <img class="hero-slider__img" src="../images/hero-05.jpg" alt="Building">
                 <div class="container hero-slider__container">
-                    <h2 class="hero-slider__sub-title">Everyday Beauty Redefined</h2>
+                    <h2 class="hero-slider__sub-title">Everyday Beauty</h2>
                     <p class="hero-slider__sub-text">A Touch of Modern Simplicity</p>
                 </div>
             </div>
