--- a/students/umienchuk_oksana/project_second_monticello/src/html/_gallery.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_gallery.html
@@ -3,72 +3,68 @@
 
         <h2 class="gallery__title">GALLERY</h2>
         <div class="gallery__grid">
-            <div class="gallery__grid-item grid-img-wrap">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-01.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="../images/gallery/gallery-img-01.jpg" alt="">
-                </a>
-            </div>
-            <div class="gallery__grid-item grid-img-wrap">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-02.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="../images/gallery/gallery-img-02.jpg" alt="">
-                </a>
-            </div>
-            <div class="gallery__grid-item grid-img-wrap">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-03.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="../images/gallery/gallery-img-03.jpg" alt="">
-                </a>
-            </div>
-            <div class="gallery__grid-item grid-img-wrap">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-04.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="../images/gallery/gallery-img-04.jpg" alt="">
-                </a>
-            </div>
-            <div class="gallery__grid-item grid-img-wrap">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-05.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="../images/gallery/gallery-img-05.jpg" alt="">
-                </a>
-            </div>
 
-            <div class="gallery__grid-item grid-img-wrap gallery-open">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-06.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="../images/gallery/gallery-img-06.jpg" alt="">
-                </a>
-            </div>
-            <div class="gallery__grid-item grid-img-wrap gallery-open">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-07.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="../images/gallery/gallery-img-07.jpg" alt="">
-                </a>
-            </div>
-            <div class="gallery__grid-item grid-img-wrap gallery-open">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-08.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="../images/gallery/gallery-img-08.jpg" alt="">
-                </a>
-            </div>
-            <div class="gallery__grid-item grid-img-wrap gallery-open">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-09.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="../images/gallery/gallery-img-09.jpg" alt="">
-                </a>
-            </div>
-            <div class="gallery__grid-item grid-img-wrap gallery-open">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-10.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="../images/gallery/gallery-img-10.jpg" alt="">
-                </a>
-            </div>
-            <div class="gallery__grid-item grid-img-wrap gallery-open">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-11.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="../images/gallery/gallery-img-11.jpg" alt="">
-                </a>
-            </div>
-            <div class="gallery__grid-item gallery__img-wrap gallery-open">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-12.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="../images/gallery/gallery-img-12.jpg" alt="">
-                </a>
-            </div>
-            <div class="gallery__grid-item grid-img-wrap gallery-open">
-                <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-13.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="../images/gallery/gallery-img-13.jpg" alt="">
-                </a>
-            </div>
+            <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-01.jpg" data-lightbox="lightbox">
+                <img class="gallery__img" src="../images/gallery/gallery-img-01.jpg" alt="">
+            </a>
+
+            <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-02.jpg" data-lightbox="lightbox">
+                <img class="gallery__img" src="../images/gallery/gallery-img-02.jpg" alt="">
+            </a>
+
+            <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-03.jpg" data-lightbox="lightbox">
+                <img class="gallery__img" src="../images/gallery/gallery-img-03.jpg" alt="">
+            </a>
+
+            <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-04.jpg" data-lightbox="lightbox">
+                <img class="gallery__img" src="../images/gallery/gallery-img-04.jpg" alt="">
+            </a>
+
+            <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-05.jpg" data-lightbox="lightbox">
+                <img class="gallery__img" src="../images/gallery/gallery-img-05.jpg" alt="">
+            </a>
+
+            <a class="gallery__link gallery-open gallery__grid-item--open"
+                href="../images/gallery/lightbox-gallery-img-06.jpg" data-lightbox="lightbox">
+                <img class="gallery__img" src="../images/gallery/gallery-img-06.jpg" alt="">
+            </a>
+
+            <a class="gallery__link gallery-open gallery__grid-item--open"
+                href="../images/gallery/lightbox-gallery-img-07.jpg" data-lightbox="lightbox">
+                <img class="gallery__img" src="../images/gallery/gallery-img-07.jpg" alt="">
+            </a>
+
+            <a class="gallery__link gallery-open gallery__grid-item--open"
+                href="../images/gallery/lightbox-gallery-img-08.jpg" data-lightbox="lightbox">
+                <img class="gallery__img" src="../images/gallery/gallery-img-08.jpg" alt="">
+            </a>
+
+            <a class="gallery__link gallery-open gallery__grid-item--open"
+                href="../images/gallery/lightbox-gallery-img-09.jpg" data-lightbox="lightbox">
+                <img class="gallery__img" src="../images/gallery/gallery-img-09.jpg" alt="">
+            </a>
+            <a class="gallery__link gallery-open gallery__grid-item--open"
+                href="../images/gallery/lightbox-gallery-img-10.jpg" data-lightbox="lightbox">
+                <img class="gallery__img" src="../images/gallery/gallery-img-10.jpg" alt="">
+            </a>
+
+            <a class="gallery__link gallery-open gallery__grid-item--open"
+                href="../images/gallery/lightbox-gallery-img-11.jpg" data-lightbox="lightbox">
+                <img class="gallery__img" src="../images/gallery/gallery-img-11.jpg" alt="">
+            </a>
+
+
+            <a class="gallery__link gallery-open gallery__grid-item--open"
+                href="../images/gallery/lightbox-gallery-img-12.jpg" data-lightbox="lightbox">
+                <img class="gallery__img" src="../images/gallery/gallery-img-12.jpg" alt="">
+            </a>
+
+
+            <a class="gallery__link gallery-open gallery__grid-item--open"
+                href="../images/gallery/lightbox-gallery-img-13.jpg" data-lightbox="lightbox">
+                <img class="gallery__img" type="button" src="../images/gallery/gallery-img-13.jpg" alt="">
+            </a>
+
         </div>
         <button class="gallery-btn btn">SEE MORE</button>
     </div>
