--- a/students/umienchuk_oksana/project_second_monticello/src/index.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/index.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
     <title>Monticello</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    @@include("./html/_menu.html")
+    @@include("./html/_header.html")
     <main class="main">
         @@include("./html/_hero.html")
         @@include("./html/_projects.html")
@@ -19,9 +18,8 @@
         @@include("./html/_map.html")
     </main>
     @@include("./html/_footer.html")
-    @@include("./html/_sprite.html")
+    @@include("./html/_svg-icon.html")
     <script src="./js/script.js"></script>
-    <script src="../node_modules/lightbox2/src/js/lightbox.js"></script>
 </body>
 
 </html>
