slick slider changes

--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_gallery.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_gallery.html
@@ -5,19 +5,29 @@
         <div class="galery-grid">
 
             <div class="galery-grid__galery-item galery-item">
-                <img class="galery-item__img" src="images/futur-house.jpg" alt="futur-house">
+                <a class="gallery__link" href="images/futur-house.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="images/futur-house.jpg" alt="">
+                </a>
             </div>
             <div class="galery-grid__galery-item galery-item">
-                <img class="galery-item__img" src="images/big-house.jpg" alt="big-house">
+                <a class="gallery__link" href="images/big-house.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="images/big-house.jpg" alt="">
+                </a>
             </div>
             <div class="galery-grid__galery-item galery-item">
-                <img class="galery-item__img" src="images/red-house.jpg" alt="red-house">
+                <a class="gallery__link" href="images/red-house.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="images/red-house.jpg" alt="">
+                </a>
             </div>
             <div class="galery-grid__galery-item galery-item">
-                <img class="galery-item__img" src="images/white-house.jpg" alt="white-house">
+                <a class="gallery__link" href="images/white-house.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="images/white-house.jpg" alt="">
+                </a>
             </div>
             <div class="galery-grid__galery-item galery-item">
-                <img class="galery-item__img" src="images/broad.jpg" alt="broad">
+                <a class="gallery__link" href="images/broad.jpg" data-lightbox="lightbox">
+                    <img class="gallery__img" src="images/broad.jpg" alt="">
+                </a>
             </div>
 
         </div>
