--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_carusel-item.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_carusel-item.html
@@ -1,7 +1,7 @@
 <div class="news-slider__item">
     <div class="news">
         <img src="@@item-image" alt="@@item-image-alt" class="news__img">
-        <div class="news__deskription">
+        <div class="news__description">
             <h3 class="news__title">@@item-title</h3>
             <p class="news__text">@@item-description</p>
             <div class="news__author news-author">
