--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/index.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
     <title>Monticello</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/sprite.svg#location" type="image/x-icon">
 </head>
@@ -26,7 +27,11 @@
     <footer class="footer">
         @@include('_footer.html')
     </footer>
+    <a class="scroll-to-top" href="#">
+        <img class="scroll-to-top__arrow" src="images/scroll.svg" alt="arrow">
+    </a>
     <script src="js/script.js"></script>
+    <script src="../node_modules/lightbox2/src/js/lightbox.js"></script>
 </body>
 
 </html>
