--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_gallery.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_gallery.html
@@ -1,38 +1,25 @@
-<section class="galery" id="galery">
+<section class="gallery" id="gallery">
     <div class="container">
-
-        <h2 class="galery__title">GALLERY</h2>
-        <div class="galery-grid">
-
-            <div class="galery-grid__galery-item galery-item">
-                <a class="gallery__link" href="images/futur-house.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="images/futur-house.jpg" alt="">
-                </a>
-            </div>
-            <div class="galery-grid__galery-item galery-item">
-                <a class="gallery__link" href="images/big-house.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="images/big-house.jpg" alt="">
-                </a>
-            </div>
-            <div class="galery-grid__galery-item galery-item">
-                <a class="gallery__link" href="images/red-house.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="images/red-house.jpg" alt="">
-                </a>
-            </div>
-            <div class="galery-grid__galery-item galery-item">
-                <a class="gallery__link" href="images/white-house.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="images/white-house.jpg" alt="">
-                </a>
-            </div>
-            <div class="galery-grid__galery-item galery-item">
-                <a class="gallery__link" href="images/broad.jpg" data-lightbox="lightbox">
-                    <img class="gallery__img" src="images/broad.jpg" alt="">
-                </a>
-            </div>
-
+        <h2 class="gallery__title">GALLERY</h2>
+        <div class="gallery__gallery-grid gallery-grid">
+            <a class="gallery-grid__gallery-item gallery-item" href="images/futur-house.jpg" data-lightbox="lightbox">
+                <img class="gallery-item__img" src="images/futur-house.jpg" alt="">
+            </a>
+            <a class="gallery-grid__gallery-item gallery-item" href="images/big-house.jpg" data-lightbox="lightbox">
+                <img class="gallery-item__img" src="images/big-house.jpg" alt="">
+            </a>
+            <a class="gallery-grid__gallery-item gallery-item" href="images/red-house.jpg" data-lightbox="lightbox">
+                <img class="gallery-item__img" src="images/red-house.jpg" alt="">
+            </a>
+            <a class="gallery-grid__gallery-item gallery-item" href="images/white-house.jpg" data-lightbox="lightbox">
+                <img class="gallery-item__img" src="images/white-house.jpg" alt="">
+            </a>
+            <a class="gallery-grid__gallery-item gallery-item" href="images/broad.jpg" data-lightbox="lightbox">
+                <img class="gallery-item__img" src="images/broad.jpg" alt="">
+            </a>
         </div>
-        <div class="galery-btn-wrapper">
-            <a class="btn galery-btn" href="#">SEE MORE</a>
+        <div class="gallery__btn-wrapper">
+            <a class="gallery__btn btn" href="#">SEE MORE</a>
         </div>
     </div>
 </section>
