--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_news.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_news.html
@@ -47,8 +47,8 @@
             })
 
             @@include('_carusel-item.html', {
-            "item-image": "images/big-house.jpg",
-            "item-image-alt": "curved-house",
+            "item-image": "images/red-house.jpg",
+            "item-image-alt": "red-house",
             "item-title": "EFFECTIVE ADVERTISING POINTERS.",
             "item-description": "Free directories: directories are perfect for customers that are searching for...",
             "user-image": "images/user-icon5.jpg",
@@ -57,5 +57,6 @@
             "date": "04 Nov 2018"
             })
         </div>
+
     </div>
 </section>
