added changes to js files

--- a/students/hridina_anastasiia/exam_project_2/src/_gallery.html
+++ b/students/hridina_anastasiia/exam_project_2/src/_gallery.html
@@ -9,38 +9,45 @@
                                         data-lightbox="galleryimage">
                                         <img class="image" src="./images/gallery/gallery1.jpeg" alt=""></a>
                                 <a class="gallery__img" href="./images/gallery/gallery2.png"
-                                        data-lightbox="galleryimage"><img class="image"
-                                                src="./images/gallery/gallery2.png" alt="Image"></a>
+                                        data-lightbox="galleryimage">
+                                        <img class="image" src="./images/gallery/gallery2.png" alt="Image"></a>
                                 <a class="gallery__img" href="./images/gallery/gallery3.jpeg"
-                                        data-lightbox="galleryimage"><img class="image"
-                                                src="./images/gallery/gallery3.jpeg" alt="Image"></a>
+                                        data-lightbox="galleryimage">
+                                        <img class="image" src="./images/gallery/gallery3.jpeg" alt="Image"></a>
                                 <a class="gallery__img" href="./images/gallery/gallery4.jpeg"
-                                        data-lightbox="galleryimage"><img class="image"
-                                                src="./images/gallery/gallery4.jpeg" alt="Image"></a>
+                                        data-lightbox="galleryimage">
+                                        <img class="image" src="./images/gallery/gallery4.jpeg" alt="Image"></a>
                                 <a class="gallery__img" href="./images/gallery/gallery5.jpeg"
-                                        data-lightbox="galleryimage"><img class="image"
-                                                src="./images/gallery/gallery5.jpeg" alt="Image"></a>
+                                        data-lightbox="galleryimage">
+                                        <img class="image" src="./images/gallery/gallery5.jpeg" alt="Image"></a>
                                 <a class="gallery__img-extra" href="./images/gallery/gallery1.jpeg"
-                                        data-lightbox="galleryimage"><img class="item hidden-item hidden"
-                                                src="./images/gallery/gallery1.jpeg" alt="Image"></a>
+                                        data-lightbox="galleryimage">
+                                        <img class="item hidden-item hidden" src="./images/gallery/gallery1.jpeg"
+                                                alt="Image"></a>
                                 <a class="gallery__img-extra" href="./images/gallery/gallery2.png"
-                                        data-lightbox="galleryimage"><img class="item hidden-item hidden"
-                                                src="./images/gallery/gallery2.png" alt="Image"></a>
+                                        data-lightbox="galleryimage">
+                                        <img class="item hidden-item hidden" src="./images/gallery/gallery2.png"
+                                                alt="Image"></a>
                                 <a class="gallery__img-extra" href="./images/gallery/gallery3.jpeg"
-                                        data-lightbox="galleryimage"><img class="item hidden-item hidden"
-                                                src="./images/gallery/gallery3.jpeg" alt="Image"></a>
+                                        data-lightbox="galleryimage">
+                                        <img class="item hidden-item hidden" src="./images/gallery/gallery3.jpeg"
+                                                alt="Image"></a>
                                 <a class="gallery__img-extra" href="./images/gallery/gallery4.jpeg"
-                                        data-lightbox="galleryimage"><img class="item hidden-item hidden"
-                                                src="./images/gallery/gallery4.jpeg" alt="Image"></a>
+                                        data-lightbox="galleryimage">
+                                        <img class="item hidden-item hidden" src="./images/gallery/gallery4.jpeg"
+                                                alt="Image"></a>
                                 <a class="gallery__img-extra" href="./images/gallery/gallery5.jpeg"
-                                        data-lightbox="galleryimage"><img class="item hidden-item hidden"
-                                                src="./images/gallery/gallery5.jpeg" alt="Image"></a>
+                                        data-lightbox="galleryimage">
+                                        <img class="item hidden-item hidden" src="./images/gallery/gallery5.jpeg"
+                                                alt="Image"></a>
                                 <a class="gallery__img-extra" href="./images/gallery/gallery1.jpeg"
-                                        data-lightbox="galleryimage-"><img class="item hidden-item hidden"
-                                                src="./images/gallery/gallery1.jpeg" alt="Image"></a>
+                                        data-lightbox="galleryimage-">
+                                        <img class="item hidden-item hidden" src="./images/gallery/gallery1.jpeg"
+                                                alt="Image"></a>
                                 <a class="gallery__img-extra" href="./images/gallery/gallery2.png"
-                                        data-lightbox="galleryimage"><img class="item hidden-item hidden"
-                                                src="./images/gallery/gallery2.png" alt="Image"></a>
+                                        data-lightbox="galleryimage">
+                                        <img class="item hidden-item hidden" src="./images/gallery/gallery2.png"
+                                                alt="Image"></a>
                                 <a class="gallery__img-extra" href="./images/gallery/gallery3.jpeg"
                                         data-lightbox="galleryimage"><img class="item hidden-item hidden"
                                                 src="./images/gallery/gallery3.jpeg" alt="Image"></a>
