--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_get-in-touch.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_get-in-touch.html
@@ -37,8 +37,8 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <form class="form" action="">
-                        <input id="user-name" type="text" name="name" placeholder="Name" />
+                    <form class="form" id="user-form" action="">
+                        <input id="user-name" type="text" name="user-name" placeholder="Name" />
                         <input id="email" type="email" name="email" placeholder="Email" />
                         <button class="form-btn">Submit</button>
                     </form>
