--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_hero-block.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_hero-block.html
@@ -1,33 +1,35 @@
 <section class="hero">
     <div class="hero-slider">
-        <div class="hero-slider__item">
-            <img class="hero-slider__img" src="images/hero-slide.jpg" alt="">
-            <div class="container hero-slider__container">
-                <h1 class="hero-slider__title">SIMPLE & MODERN</h1>
-                <p class="hero-slider__text">WE MAKE THE WORLD BEAUTIFUL</p>
-            </div>
-        </div>
-        <div class="hero-slider__item">
-            <img class="hero-slider__img" src="images/broad.jpg" alt="">
-            <div class="hero__container">
-                <h2 class="hero-slider__title">SIMPLE & MODERN</h2>
-                <p class="hero-slider__text">WE MAKE THE WORLD BEAUTIFUL</p>
-            </div>
-        </div>
-        <div class="hero-slider__item">
-            <img class="hero-slider__img" src="images/broad.jpg" alt="">
-            <div class="hero__container">
-                <h2 class="hero-slider__title">SIMPLE & MODERN</h2>
-                <p class="hero-slider__text">WE MAKE THE WORLD BEAUTIFUL</p>
-            </div>
-        </div>
-        <div class="hero-slider__item">
-            <img class="hero-slider__img" src="images/broad.jpg" alt="">
-            <div class="hero__container">
-                <h2 class="hero-slider__title">SIMPLE & MODERN</h2>
-                <p class="hero-slider__text">WE MAKE THE WORLD BEAUTIFUL</p>
-            </div>
-        </div>
+        @@include('_hero-slider-item.html', {
+        "hero-slider-img": "images/hero-slide.jpg",
+        "hero-slider-img-alt": "hero-slide image",
+        "hero-slider-title": "SIMPLE & MODERN",
+        "hero-slider-text": "WE MAKE THE WORLD BEAUTIFUL"
+        })
+        @@include('_hero-slider-item.html', {
+        "hero-slider-img": "images/cubic-house.jpg",
+        "hero-slider-img-alt": "cubic-house",
+        "hero-slider-title": "ELEGANT & TIMELESS",
+        "hero-slider-text": "WE CREATE TIMELESS BEAUTY"
+        })
+        @@include('_hero-slider-item.html', {
+        "hero-slider-img": "images/futur-house.jpg",
+        "hero-slider-img-alt": "futur-house",
+        "hero-slider-title": "STYLISH & SLEEK",
+        "hero-slider-text": "UNVEIL SLEEK ELEGANCE"
+        })
+        @@include('_hero-slider-item.html', {
+        "hero-slider-img": "images/white-house.jpg",
+        "hero-slider-img-alt": "white-house",
+        "hero-slider-title": "MINIMAL & SOPHISTICATED",
+        "hero-slider-text": "UNVEIL SOPHISTICATED MINIMALISM"
+        })
+        @@include('_hero-slider-item.html', {
+        "hero-slider-img": "images/sphere-house.jpg",
+        "hero-slider-img-alt": "sphere-house",
+        "hero-slider-title": "MODERN & CREATIVE",
+        "hero-slider-text": "FUELING CREATIVITY WITH MODERN DESIGN"
+        })
     </div>
     <div class="scroll-down">
         <div class="scroll-down__wrapper">
