--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_nav.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_nav.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-3 col-md-4">
             <div class="logo">
-                <img src="images/logo.png" alt="">
+                <img src="images/logo.png" alt="logo">
             </div>
         </div>
         <div class="col-6 col-md-8">
@@ -13,7 +13,7 @@
                     </button>
                     <ul class="menu">
                         <li class="menu__item"><a href="#what-we-do" class="menu__item-link">ABOUT US</a></li>
-                        <li class="menu__item"><a href="#galery" class="menu__item-link">PROJECTS</a></li>
+                        <li class="menu__item"><a href="#gallery" class="menu__item-link">PROJECTS</a></li>
                         <li class="menu__item"><a href="#news" class="menu__item-link">NEWS</a></li>
                         <li class="menu__item"><a href="#get-in-touch" class="menu__item-link">CONTACT</a></li>
                     </ul>
