--- a/students/umienchuk_oksana/project_second_monticello/src/html/_projects.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_projects.html
@@ -1,3 +1,40 @@
-<section id="anchor-down-click">
-
+<section id="anchor-down-click" class="project">
+    <div class="container">
+        <h2 class="project__title">WHAT WE DO</h2>
+        <div class="project__block one">
+            <img class="project__block-img" src="../images/project-one.png" alt="Trade Center Image">
+            <div class="project__block-text block-desc-one">
+                <p class="block__sub-text">ONE WORLD</p>
+                <h3 class="block__title">TRADE CENTER</h3>
+                <p class="block__desc">Increasing prosperity in our lives can be accomplished by having the right frame
+                    of
+                    mind.
+                    The truth is, our thoughts are very powerful.</p>
+                <a href="#" class="btn">MORE DETAILS</a>
+                <div class="block__find-link">
+                    <svg class="icon-img">
+                        <use xlink:href="#find" />
+                    </svg>
+                    <p class="block__find-map">New York City, United States - 1776 feet </p>
+                </div>
+            </div>
+        </div>
+        <div class="project__block two">
+            <div class="project__block-text block-desc-two">
+                <p class="block__sub-text">COMMERCE CENTRE</p>
+                <h3 class="block__title">TRADE CENTER</h3>
+                <p class="block__desc">Successful businesses have many things in common, today we’ll look at the big ‘R’
+                    of
+                    recognition and how a digital advertising network may help.</p>
+                <a href="#" class="btn">MORE DETAILS</a>
+                <div class="block__find-link">
+                    <svg class="icon-img">
+                        <use xlink:href="#find" />
+                    </svg>
+                    <p class="block__find-map">Hong Kong - 1588 feet</p>
+                </div>
+            </div>
+            <img class="project__block-img" src="../images/project-two.png" alt="Commerce Centre Image">
+        </div>
+    </div>
 </section>
