--- a/students/umienchuk_oksana/project_second_monticello/src/html/_header.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_header.html
@@ -1,13 +1,10 @@
 <section class="header">
     <div class="container">
-        <div class="logo">
-            <img src="../images/logo.svg" alt="Monticello Logo">
-        </div>
-        <nav class="menu-wrapper">
-            <button class="menu-open-btn _open mobile-only" type="button">
-                <span class="menu-open-btn__line"></span>
-            </button>
-            <ul class="menu">
+        <nav class="menu-wrapper flex-wrap">
+            <div class="logo">
+                <img class="logo__img" src="../images/logo.svg" alt="Monticello Logo">
+            </div>
+            <ul class="menu menu__items">
                 <li class="menu__item">
                     <a class="menu__link" href="#">ABOUT US</a>
                 </li>
@@ -20,10 +17,13 @@
                 <li class="menu__item">
                     <a class="menu__link" href="#">CONTACT</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item menu__social">
                     @@include("./_socials.html")
                 </li>
             </ul>
+            <button class="menu-open-btn mobile-only" type="button">
+                <span class="menu-open-btn__line"></span>
+            </button>
         </nav>
     </div>
 </section>
