--- a/students/umienchuk_oksana/project_second_monticello/src/html/_gallery.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_gallery.html
@@ -4,8 +4,12 @@
         <h2 class="gallery__title">GALLERY</h2>
         <div class="gallery__grid">
 
-            <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-01.jpg" data-lightbox="lightbox">
+            <a class="gallery__link first-img" href="../images/gallery/lightbox-gallery-img-01.jpg"
+                data-lightbox="lightbox">
                 <img class="gallery__img" src="../images/gallery/gallery-img-01.jpg" alt="">
+                <svg class="gallery__icon-img">
+                    <use xlink:href="#zoom" />
+                </svg>
             </a>
 
             <a class="gallery__link" href="../images/gallery/lightbox-gallery-img-02.jpg" data-lightbox="lightbox">
