--- a/students/umienchuk_oksana/project_second_monticello/src/html/_projects.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_projects.html
@@ -10,7 +10,7 @@
                     of
                     mind.
                     The truth is, our thoughts are very powerful.</p>
-                <a href="#" class="btn">MORE DETAILS</a>
+                <a href="#" class="btn project__btn">MORE DETAILS</a>
                 <div class="block__find-link">
                     <svg class="icon-img">
                         <use xlink:href="#find" />
@@ -26,7 +26,7 @@
                 <p class="block__desc">Successful businesses have many things in common, today we’ll look at the big ‘R’
                     of
                     recognition and how a digital advertising network may help.</p>
-                <a href="#" class="btn">MORE DETAILS</a>
+                <a href="#" class="btn project__btn">MORE DETAILS</a>
                 <div class="block__find-link">
                     <svg class="icon-img">
                         <use xlink:href="#find" />
