--- a/students/umienchuk_oksana/project_second_monticello/src/html/_header.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_header.html
@@ -1,4 +1,4 @@
-<section class="header">
+<section class="header bg-scroll">
     <div class="container">
         <nav class="menu-wrapper flex-wrap">
             <div class="logo">
