--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_nav.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_nav.html
@@ -1,11 +1,11 @@
 <div class="container">
     <div class="row">
-        <div class="col-3 col-md-4">
+        <div class="col-3 col-md-4 col-sm-9">
             <div class="logo">
                 <img src="images/logo.png" alt="logo">
             </div>
         </div>
-        <div class="col-6 col-md-8">
+        <div class="col-6 col-md-8 col-sm-3">
             <div class="nav">
                 <nav class="menu-wrapper">
                     <button class="menu-open-btn only-mobile" type="button">
