--- a/students/umienchuk_oksana/project_second_monticello/src/html/_footer.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_footer.html
@@ -7,6 +7,15 @@
         <div class="footer__socials">
             <img src="../images/logo.svg" alt="Logo">
             @@include("./_socials.html")
+
+            @@include("./_socials.html",
+            {
+            "right":" ",
+            })
+            @@include("./_socials.html",
+            {
+            "right":"right",
+            })
         </div>
     </div>
 </section>
