--- a/students/umienchuk_oksana/project_second_monticello/src/html/_socials.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_socials.html
@@ -1,4 +1,4 @@
-<section class="social">
+<section class="social @@right">
     <ul class="social-icons">
         <li class="social-icon">
             <a href="#" class="social-icon__link">
