--- a/students/umienchuk_oksana/project_second_monticello/src/html/_projects.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_projects.html
@@ -2,7 +2,7 @@
     <div class="container">
         <h2 class="project__title">WHAT WE DO</h2>
         <div class="project__block one">
-            <img class="project__block-img" src="../images/project-one.png" alt="Trade Center Image">
+            <img class="project__block-img col-7" src="../images/project-one.png" alt="Trade Center Image">
             <div class="project__block-text block-desc-one">
                 <p class="block__sub-text">ONE WORLD</p>
                 <h3 class="block__title">TRADE CENTER</h3>
@@ -21,11 +21,10 @@
         </div>
         <div class="project__block two">
             <div class="project__block-text block-desc-two">
-                <p class="block__sub-text">COMMERCE CENTRE</p>
-                <h3 class="block__title">TRADE CENTER</h3>
+                <p class="block__sub-text">INTERNATIONAL</p>
+                <h3 class="block__title">COMMERCE CENTRE</h3>
                 <p class="block__desc">Successful businesses have many things in common, today we’ll look at the big ‘R’
-                    of
-                    recognition and how a digital advertising network may help.</p>
+                    of recognition and how a digital advertising network may help.</p>
                 <a href="#" class="btn project__btn">MORE DETAILS</a>
                 <div class="block__find-link">
                     <svg class="icon-img">
